crates/al_syntax/src/parser/mod.rs
use crate::ast;
use crate::diagnostic::{Diagnostic, DiagnosticCode};
use crate::scanner::Scanner;
use crate::span::Span;
use crate::token::{Keyword, Kind, Token, Trivia, is_type_name};

type PResult<T> = Result<T, String>;

#[derive(Debug, Clone, Copy, PartialEq, Eq)]
enum ParseContext {
    TopLevel,
    Block,
    FunctionParams,
    Array,
    TypeDef,
    MatchArms,
}

/// Result of `synchronize()`: whether recovery stopped at the start of the
/// next item inside the current construct, or ran through and consumed the
/// construct's closing delimiter. Callers must handle `ConsumedCloser` by
/// popping their own context and skipping the trailing `eat(close)`.
#[must_use]
#[derive(Debug, Clone, Copy, PartialEq, Eq)]
enum SyncOutcome {
    AtItem,
    ConsumedCloser,
}

/// Where [`Parser::recover_in_arm`] left the parser after a failed pattern,
/// guard, `->`, or body inside a `match` arm. `ConsumedCloser` means recovery
/// ate the match's `}` (the caller must stop and skip its own `eat`);
/// `AtCloseBrace`/`AtArrow` mean recovery stopped just before that token;
/// `Resume` means it stopped at the start of a plausible next arm.
#[must_use]
#[derive(Debug, Clone, Copy, PartialEq, Eq)]
enum ArmRecovery {
    ConsumedCloser,
    AtCloseBrace,
    AtArrow,
    Resume,
}

/// A parsed source file: its top-level body, the module doc comment (a `/** */`
/// block that is the very first thing in the file — see
/// [`Parser::take_module_doc`]), and everything the scanner/parser complained
/// about.
pub struct ParseResult {
    pub ast: ast::BlockExpression,
    pub doc: Option<String>,
    pub diagnostics: Vec<Diagnostic>,
}

pub struct Parser {
    tokens: Vec<Token>,
    index: usize,
    diagnostics: Vec<Diagnostic>,
    context_stack: Vec<ParseContext>,
    prev_token_end_line: i32,
    prev_token_end_column: i32,
    depth: u32,
    /// Index of the token whose leading trivia gave up the module doc comment
    /// (always the first token, when the file opens with one). Set by
    /// [`Parser::take_module_doc`] so [`Parser::extract_doc_comment`] skips
    /// that comment instead of re-attaching it to the first declaration.
    module_doc_token: Option<usize>,
}

pub fn new_parser(s: &mut Scanner) -> Parser {
    let (tokens, diags) = s.scan_all();
    new_parser_from_tokens(tokens, diags)
}

pub fn new_parser_from_tokens(
    mut tokens: Vec<Token>,
    scanner_diagnostics: Vec<Diagnostic>,
) -> Parser {
    // The parser's advance() refuses to move past the last token and every
    // loop exits on Eof, so the token stream must end with one. The scanner
    // always appends it; enforce the invariant here so a hand-built stream
    // that forgot the terminator cannot send the parser out of bounds.
    if tokens.last().map(|t| &t.kind) != Some(&Kind::Eof) {
        let span = tokens.last().map_or(Span::DUMMY, |t| {
            Span::point(t.span.end_line, t.span.end_column)
        });
        tokens.push(Token {
            kind: Kind::Eof,
            span,
            leading_trivia: Vec::new(),
        });
    }
    Parser {
        tokens,
        index: 0,
        diagnostics: scanner_diagnostics,
        context_stack: vec![ParseContext::TopLevel],
        prev_token_end_line: 0,
        prev_token_end_column: 0,
        depth: 0,
        module_doc_token: None,
    }
}

// Checks whether a token begins a type annotation in let/const binding position.
// Lowercase identifiers are NOT type-starts here: free type variables are
// meaningless in let/const annotations. Function param and return positions
// DO admit lowercase type variables and use `at_loose_type_start` instead.
fn is_type_start_token(tok: &Token) -> bool {
    match &tok.kind {
        Kind::Keyword(Keyword::Fn) => true,
        Kind::PuncOpenParen => true,
        Kind::Identifier(name) => is_type_name(name),
        _ => false,
    }
}

// Bounds recursive-descent depth so that pathologically nested input
// (`((((…`, `!!!!…`, `(T,(T,…` nested types, `S(S(S(…`) becomes a normal parse error
// instead of overflowing the native stack and aborting the process. Since
// the parser is the sole AST producer, bounding it here transitively bounds
// every downstream AST walker (compiler, formatter, inferencer).
//
// 128 mirrors serde_json's RECURSION_LIMIT: it must be small enough that the
// deepest native-frame path (an expression level descends ~7 frames through
// the precedence chain per depth unit) cannot overflow the smallest stack
// the parser runs on — notably the ~2 MiB libtest thread — before the guard
// trips. It is still far above any real program (examples peak at bracket
// depth ~5; the effective paren cap is ~42 levels).
const MAX_PARSE_DEPTH: u32 = 128;

impl Parser {
    // Runs `f` one recursion level deeper, rejecting input that nests past
    // MAX_PARSE_DEPTH. The depth counter is decremented unconditionally after
    // `f` returns (no `?` between the increment and decrement), so it stays
    // exactly balanced on both the Ok and Err paths — error recovery
    // (synchronize() then continue) always resumes at the correct depth.
    fn with_recursion_guard<T>(&mut self, f: impl FnOnce(&mut Self) -> PResult<T>) -> PResult<T> {
        self.depth += 1;
        if self.depth > MAX_PARSE_DEPTH {
            self.depth -= 1;
            return Err("expression or type nesting too deep".to_string());
        }
        let r = f(self);
        self.depth -= 1;
        r
    }

    fn push_context(&mut self, ctx: ParseContext) {
        self.context_stack.push(ctx);
    }

    fn pop_context(&mut self) {
        debug_assert!(self.context_stack.len() > 1, "context stack underflow");
        if self.context_stack.len() > 1 {
            self.context_stack.pop();
        }
    }

    // Runs `f` with `ctx` on the context stack, popping unconditionally on
    // both the Ok and Err paths so a `?` inside `f` cannot leave a stale
    // context behind (which would misdirect every later `synchronize()`).
    // Use this for constructs that propagate errors via `?`; constructs that
    // recover in place (block/array/match) still use push/pop directly
    // because they must act on the SyncOutcome from their `synchronize()`.
    fn with_context<T>(
        &mut self,
        ctx: ParseContext,
        f: impl FnOnce(&mut Self) -> PResult<T>,
    ) -> PResult<T> {
        self.context_stack.push(ctx);
        let r = f(self);
        debug_assert_eq!(self.context_stack.last(), Some(&ctx));
        self.context_stack.pop();
        r
    }

    fn current_context(&self) -> ParseContext {
        *self.context_stack.last().unwrap_or(&ParseContext::TopLevel)
    }

    /// Single emit path for parser diagnostics at an arbitrary span.
    fn error_at(&mut self, span: Span, message: impl Into<String>) {
        self.diagnostics.push(Diagnostic::error(
            span,
            DiagnosticCode::ParseError,
            message.into(),
        ));
    }

    fn add_error(&mut self, message: String) {
        // Every parse error funnels through here after a failed `eat`; when the
        // parser is stuck on the EOF token the error is by construction an
        // unexpected-EOF, so tag it structurally rather than by message text.
        let code = if self.kind() == Kind::Eof {
            DiagnosticCode::UnexpectedEof
        } else {
            DiagnosticCode::ParseError
        };
        let sp = self.cur().span;
        self.diagnostics.push(Diagnostic::error(
            Span::point(sp.start_line, sp.start_column),
            code,
            message,
        ));
    }

    fn current_span(&self) -> Span {
        self.cur().span
    }

    fn span_from(&self, start: Span) -> Span {
        Span {
            start_line: start.start_line,
            start_column: start.start_column,
            end_line: self.prev_token_end_line,
            end_column: self.prev_token_end_column,
        }
    }

    fn cur(&self) -> &Token {
        &self.tokens[self.index]
    }

    fn kind(&self) -> Kind {
        self.tokens[self.index].kind.clone()
    }

    fn save_token_end(&mut self) {
        let sp = self.tokens[self.index].span;
        self.prev_token_end_line = sp.end_line;
        self.prev_token_end_column = sp.end_column;
    }

    // Skips tokens until a plausible resumption point for the current context.
    // The #[must_use] outcome tells the caller whether recovery consumed the
    // context's closing delimiter: on `ConsumedCloser` the caller must pop its
    // own context and skip its trailing `eat(close)`. `synchronize` never
    // touches the context stack itself — the frame that pushed always pops.
    fn synchronize(&mut self) -> SyncOutcome {
        let ctx = self.current_context();
        let mut iterations = 0u32;

        while self.kind() != Kind::Eof {
            iterations += 1;
            if iterations > 1000 {
                self.add_error(
                    "Parser recovery failed: too many recovery attempts. This is a bug in the parser."
                        .to_string(),
                );
                while self.kind() != Kind::Eof {
                    self.advance();
                }
                return SyncOutcome::AtItem;
            }
            let delim: Option<(Kind, &[Kind])> = match ctx {
                ParseContext::TopLevel => {
                    if matches!(
                        self.kind(),
                        Kind::Keyword(Keyword::Fn)
                            | Kind::Keyword(Keyword::Type)
                            | Kind::Keyword(Keyword::Const)
                            | Kind::Keyword(Keyword::Import)
                            | Kind::Keyword(Keyword::Pub)
                            | Kind::PuncAt
                            | Kind::Identifier(_)
                    ) {
                        return SyncOutcome::AtItem;
                    }
                    None
                }
                ParseContext::Block => {
                    if self.kind() == Kind::PuncCloseBrace {
                        self.advance();
                        return SyncOutcome::ConsumedCloser;
                    }
                    if matches!(
                        self.kind(),
                        Kind::Keyword(Keyword::If)
                            | Kind::Keyword(Keyword::Match)
                            | Kind::Keyword(Keyword::Fn)
                            | Kind::Identifier(_)
                    ) {
                        return SyncOutcome::AtItem;
                    }
                    None
                }
                ParseContext::FunctionParams => {
                    Some((Kind::PuncCloseParen, &[Kind::PuncOpenBrace]))
                }
                ParseContext::Array => Some((Kind::PuncCloseBracket, &[])),
                ParseContext::TypeDef => Some((Kind::PuncCloseBrace, &[])),
                ParseContext::MatchArms => Some((Kind::PuncCloseBrace, &[Kind::PuncArrow])),
            };

            if let Some((close, extra_stops)) = delim {
                if self.kind() == close {
                    self.advance();
                    return SyncOutcome::ConsumedCloser;
                }
                if extra_stops.contains(&self.kind()) {
                    return SyncOutcome::AtItem;
                }
                if self.kind() == Kind::PuncComma {
                    self.advance();
                    return SyncOutcome::AtItem;
                }
            }

            self.advance();
        }
        SyncOutcome::AtItem
    }

    // Shared error-recovery step inside a `match` arm (failed pattern, guard,
    // `->`, or body): record the diagnostic, synchronize, and classify where
    // recovery landed so each call site is a small match on the variant.
    fn recover_in_arm(&mut self, err: String) -> ArmRecovery {
        self.add_error(err);
        if self.synchronize() == SyncOutcome::ConsumedCloser {
            return ArmRecovery::ConsumedCloser;
        }
        match self.kind() {
            Kind::PuncCloseBrace => ArmRecovery::AtCloseBrace,
            Kind::PuncArrow => ArmRecovery::AtArrow,
            _ => ArmRecovery::Resume,
        }
    }

    // Shared error-recovery step for top-level and block node loops: record the
    // diagnostic, skip to a synchronization point, and produce an error node
    // standing in for the unparseable region.
    fn recover_node(&mut self, err: String, span: Span) -> (ast::Node, SyncOutcome) {
        self.add_error(err.clone());
        let outcome = self.synchronize();
        let node = ast::Node::Expression(ast::Expression::ErrorNode(ast::ErrorNode {
            message: err,
            span,
        }));
        (node, outcome)
    }

    fn advance(&mut self) {
        if self.index + 1 < self.tokens.len() {
            self.save_token_end();
            self.index += 1;
        }
    }

    fn eat(&mut self, kind: Kind) -> PResult<()> {
        if self.tokens[self.index].kind == kind {
            self.save_token_end();
            self.index += 1;
            return Ok(());
        }

        Err(format!("Expected '{}', got '{}'", kind, self.cur()))
    }

    // Consumes the current token and returns its text when `extract` matches
    // its kind. Text-bearing kinds carry their text as a payload, so a matched
    // token always has text — there is no "identifier without a literal" state
    // to defend against.
    fn eat_payload(
        &mut self,
        message: &str,
        extract: impl FnOnce(&Kind) -> Option<String>,
    ) -> PResult<String> {
        match extract(&self.tokens[self.index].kind) {
            Some(text) => {
                self.save_token_end();
                self.index += 1;
                Ok(text)
            }
            None => Err(format!("{}, got '{}'", message, self.cur())),
        }
    }

    fn eat_name(&mut self, message: &str) -> PResult<String> {
        self.eat_payload(message, |k| match k {
            Kind::Identifier(name) => Some(name.to_string()),
            _ => None,
        })
    }

    fn eat_number(&mut self, message: &str) -> PResult<String> {
        self.eat_payload(message, |k| match k {
            Kind::LiteralNumber(text) => Some(text.to_string()),
            _ => None,
        })
    }

    fn eat_string(&mut self, message: &str) -> PResult<String> {
        self.eat_payload(message, |k| match k {
            Kind::LiteralString(text) => Some(text.to_string()),
            _ => None,
        })
    }

    fn eat_interp_part(&mut self, message: &str) -> PResult<String> {
        self.eat_payload(message, |k| match k {
            Kind::InterpStringPart(text) => Some(text.to_string()),
            _ => None,
        })
    }

    fn eat_identifier(&mut self, message: &str) -> PResult<ast::Identifier> {
        let span = self.current_span();
        let name = self.eat_name(message)?;
        Ok(ast::Identifier { name, span })
    }

    fn peek_next(&self) -> Option<Kind> {
        self.tokens.get(self.index + 1).map(|t| t.kind.clone())
    }

    fn has_newline_before_current(&self) -> bool {
        self.cur()
            .leading_trivia
            .iter()
            .any(|t| matches!(t, Trivia::Newline))
    }

    /// The doc comment attached to the declaration about to be parsed: the
    /// first `/** */` in the current token's leading trivia. When that token
    /// also donated the *module* doc (`module_doc_token`), the first one is
    /// already spoken for, so the declaration takes the next one — a file that
    /// opens with a module doc and a decl doc back to back keeps both.
    fn extract_doc_comment(&self) -> Option<String> {
        let taken = usize::from(self.module_doc_token == Some(self.index));
        self.cur()
            .leading_trivia
            .iter()
            .filter_map(|t| match t {
                Trivia::DocComment(text) => Some(text),
                _ => None,
            })
            .nth(taken)
            .cloned()
    }

    /// The module doc comment: a `/** */` block that begins on line 0, i.e. is
    /// the very first thing in the file. Trivia carries no span, but the
    /// scanner emits a `Newline` for every line break and drops only
    /// horizontal whitespace — so "no `Newline` (and nothing else) precedes it
    /// in the first token's leading trivia" is exactly "starts on line 0".
    /// Records the donating token so `extract_doc_comment` cannot hand the
    /// same comment to the first declaration as well.
    fn take_module_doc(&mut self) -> Option<String> {
        let doc = match self.cur().leading_trivia.first() {
            Some(Trivia::DocComment(text)) => text.clone(),
            _ => return None,
        };
        self.module_doc_token = Some(self.index);
        Some(doc)
    }

    // Parses `open` then zero or more comma-separated items then `close`.
    // Allows a trailing comma.
    fn parse_comma_list<T>(
        &mut self,
        open: Kind,
        close: Kind,
        mut item: impl FnMut(&mut Self) -> PResult<T>,
    ) -> PResult<Vec<T>> {
        self.eat(open)?;
        let mut items = Vec::new();
        while self.kind() != close && self.kind() != Kind::Eof {
            items.push(item(self)?);
            if self.kind() == Kind::PuncComma {
                self.eat(Kind::PuncComma)?;
            } else {
                break;
            }
        }
        self.eat(close)?;
        Ok(items)
    }

    /// Items inside a type body: one per line. `noun` names them in the error.
    ///
    /// A newline is the separator, not merely permitted whitespace — the
    /// formatter has always emitted one per line, so accepting
    /// `type User { age Int username String }` only let source drift from what
    /// `al fmt` produces. A comma at a separator position is a hard error: the
    /// items are self-delimiting, so the comma carries no information.
    fn parse_line_separated_list<T>(
        &mut self,
        close: Kind,
        noun: &str,
        mut item: impl FnMut(&mut Self) -> PResult<T>,
    ) -> PResult<Vec<T>> {
        let mut items = Vec::new();
        let mut prev_end_line: Option<i32> = None;
        while self.kind() != close && self.kind() != Kind::Eof {
            if self.kind() == Kind::PuncComma {
                return Err(format!(
                    "unexpected `,` — each {noun} goes on its own line, not comma-separated"
                ));
            }
            if prev_end_line == Some(self.current_span().start_line) {
                return Err(format!("each {noun} must be on its own line"));
            }
            items.push(item(self)?);
            prev_end_line = Some(self.prev_token_end_line);
        }
        Ok(items)
    }

    /// Constructor fields. Adjacent fields must be *separated*, and a newline
    /// separates as well as a comma does:
    ///
    /// ```text
    /// Normie(username String, age Int)     // one line: comma
    /// Done(                                // broken: the newline is enough
    ///     method Binary
    ///     target Binary
    /// )
    /// ```
    ///
    /// Only a same-line list without commas is rejected: nothing marks where
    /// one field ends, and the reader is left counting words.
    fn parse_field_list<T>(
        &mut self,
        close: Kind,
        mut item: impl FnMut(&mut Self) -> PResult<T>,
    ) -> PResult<Vec<T>> {
        let mut items = Vec::new();
        while self.kind() != close && self.kind() != Kind::Eof {
            items.push(item(self)?);
            if self.kind() == Kind::PuncComma {
                self.eat(Kind::PuncComma)?;
                continue;
            }
            if self.kind() == close {
                break;
            }
            if self.current_span().start_line > self.prev_token_end_line {
                continue; // a newline separates
            }
            return Err(
                "fields on one line are separated by commas: `Name(a Int, b String)`".to_string(),
            );
        }
        Ok(items)
    }

    fn is_type_start(&self) -> bool {
        is_type_start_token(self.cur())
    }

    // Scan forward from the token after current for a depth-0 `=` before a
    // depth-0 newline. Distinguishes `x Type = ...` / `x = ...` (binding) from
    // `xs[0]` / `Ctor(args)` (expression) without the brittle type-start
    // heuristic that misfires on uppercase constructors and `(` tuple types.
    fn is_binding_ahead(&self) -> bool {
        let mut depth = 0i32;
        let mut i = self.index + 1;
        while i < self.tokens.len() {
            let tok = &self.tokens[i];
            if depth == 0
                && tok
                    .leading_trivia
                    .iter()
                    .any(|t| matches!(t, Trivia::Newline))
            {
                return false;
            }
            match tok.kind {
                Kind::PuncOpenParen | Kind::PuncOpenBracket | Kind::PuncOpenBrace => depth += 1,
                Kind::PuncCloseParen | Kind::PuncCloseBracket | Kind::PuncCloseBrace => depth -= 1,
                Kind::PuncEquals if depth == 0 => return true,
                Kind::PuncEqualsComparator if depth == 0 => return false,
                Kind::Eof => return false,
                _ => {}
            }
            i += 1;
        }
        false
    }

    // Takes `self` by value: parsing moves the diagnostics into the result,
    // so a parser cannot be run twice (the second run would silently report
    // an empty program with no diagnostics).
    pub fn parse_program(mut self) -> ParseResult {
        let program_span = self.current_span();
        let doc = self.take_module_doc();
        let mut body: Vec<ast::Node> = Vec::new();
        let mut seen_non_import = false;

        while self.kind() != Kind::Eof {
            let span = self.current_span();
            match self.parse_node() {
                Ok(node) => {
                    let is_import = matches!(
                        &node,
                        ast::Node::Statement(s) if matches!(**s, ast::Statement::ImportDeclaration(_))
                    );
                    if is_import && seen_non_import {
                        self.error_at(node.span(), "Imports must precede all other declarations");
                    }
                    if !is_import {
                        seen_non_import = true;
                    }
                    body.push(node)
                }
                Err(err) => {
                    // TopLevel has no closing delimiter, so the outcome is always AtItem.
                    let (node, _) = self.recover_node(err, span);
                    body.push(node);
                    continue;
                }
            }
        }

        let span = self.span_from(program_span);
        ParseResult {
            ast: ast::BlockExpression { body, span },
            doc,
            diagnostics: self.diagnostics,
        }
    }

    fn parse_node(&mut self) -> PResult<ast::Node> {
        match self.kind() {
            Kind::PuncAt => {
                let doc = self.extract_doc_comment();
                let attrs = self.parse_attributes()?;
                return Ok(ast::Node::Statement(Box::new(
                    self.parse_attributed_declaration(doc, attrs)?,
                )));
            }
            Kind::Keyword(Keyword::Const) => {
                let doc = self.extract_doc_comment();
                let decl = self.parse_const_binding(doc)?;
                return Ok(ast::Node::Statement(Box::new(
                    ast::Statement::Declaration {
                        decl: Box::new(decl),
                        public: false,
                    },
                )));
            }
            Kind::Keyword(Keyword::Fn) => {
                return self.parse_function();
            }
            Kind::Keyword(Keyword::Type) => {
                let doc = self.extract_doc_comment();
                let decl = self.parse_type_declaration(doc, Vec::new(), false)?;
                return Ok(ast::Node::Statement(Box::new(
                    ast::Statement::Declaration {
                        decl: Box::new(decl),
                        public: false,
                    },
                )));
            }
            Kind::Keyword(Keyword::Import) => {
                return Ok(ast::Node::Statement(Box::new(
                    self.parse_import_declaration()?,
                )));
            }
            Kind::Keyword(Keyword::Pub) => {
                let doc = self.extract_doc_comment();
                return Ok(ast::Node::Statement(Box::new(
                    self.parse_attributed_declaration(doc, Vec::new())?,
                )));
            }
            Kind::PuncOpenParen => {
                if self.is_tuple_destructuring() {
                    return Ok(ast::Node::Statement(Box::new(
                        self.parse_tuple_destructuring()?,
                    )));
                }
            }
            Kind::Identifier(name) if self.is_binding_ahead() => {
                if is_type_name(&name) {
                    // Uppercase ident with a depth-0 `=` ahead. Only commit
                    // to the statement forms when the token immediately
                    // after the name is `=` (TypedDiscard) or `(` (ctor
                    // destructure); anything else (e.g. `Foo.Bar = ..`)
                    // falls through to expression parsing.
                    match self.peek_next() {
                        Some(Kind::PuncEquals) => {
                            return Ok(ast::Node::Statement(Box::new(self.parse_typed_discard()?)));
                        }
                        Some(Kind::PuncOpenParen) => {
                            return Ok(ast::Node::Statement(Box::new(
                                self.parse_ctor_destructuring()?,
                            )));
                        }
                        _ => {}
                    }
                } else {
                    return Ok(ast::Node::Statement(Box::new(self.parse_binding()?)));
                }
            }
            _ => {}
        }
        Ok(ast::Node::Expression(self.parse_expression()?))
    }

    fn parse_expression(&mut self) -> PResult<ast::Expression> {
        self.with_recursion_guard(Self::parse_or_expression)
    }

    fn parse_or_expression(&mut self) -> PResult<ast::Expression> {
        let left = self.parse_binary_expression()?;

        if self.kind() == Kind::Keyword(Keyword::Or) {
            self.eat(Kind::Keyword(Keyword::Or))?;

            let mut receiver: Option<ast::Identifier> = None;

            if matches!(self.kind(), Kind::Identifier(_))
                && self.peek_next() == Some(Kind::PuncArrow)
            {
                receiver = Some(self.eat_identifier("Expected identifier for or receiver")?);
                self.eat(Kind::PuncArrow)?;
            }

            let body = self.parse_expression()?;

            let span = self.span_from(left.span());
            return Ok(ast::Expression::OrExpression(ast::OrExpression {
                expression: Box::new(left),
                receiver,
                body: Box::new(body),
                span,
            }));
        }

        Ok(left)
    }

    // Binary-operator precedence ladder, loosest first. Each level is parsed
    // as a left-associative chain over the next-tighter level. Range is spliced
    // between comparison (3) and additive (4); past the table we hit unary.
    const PRECEDENCE: &[&[(Kind, ast::BinaryOp)]] = &[
        &[(Kind::LogicalOr, ast::BinaryOp::Or)],
        &[(Kind::LogicalAnd, ast::BinaryOp::And)],
        &[
            (Kind::PuncEqualsComparator, ast::BinaryOp::Eq),
            (Kind::PuncNotEqual, ast::BinaryOp::Ne),
        ],
        &[
            (Kind::PuncLt, ast::BinaryOp::Lt),
            (Kind::PuncGt, ast::BinaryOp::Gt),
            (Kind::PuncLte, ast::BinaryOp::Le),
            (Kind::PuncGte, ast::BinaryOp::Ge),
        ],
        &[
            (Kind::PuncPlus, ast::BinaryOp::Add),
            (Kind::PuncMinus, ast::BinaryOp::Sub),
        ],
        &[
            (Kind::PuncMul, ast::BinaryOp::Mul),
            (Kind::PuncDiv, ast::BinaryOp::Div),
            (Kind::PuncMod, ast::BinaryOp::Mod),
        ],
    ];

    // Range is spliced into the precedence chain between PRECEDENCE[RANGE_LEVEL]
    // (comparison) and PRECEDENCE[RANGE_LEVEL + 1] (additive); see parse_range.
    const RANGE_LEVEL: usize = 3;

    fn parse_binary_expression(&mut self) -> PResult<ast::Expression> {
        self.parse_level(0)
    }

    fn parse_level(&mut self, lvl: usize) -> PResult<ast::Expression> {
        if lvl == Self::PRECEDENCE.len() {
            return self.parse_unary_expression();
        }
        let next = |p: &mut Self| {
            if lvl == Self::RANGE_LEVEL {
                p.parse_range()
            } else {
                p.parse_level(lvl + 1)
            }
        };
        let mut left = next(self)?;
        while let Some((tok, op)) = Self::PRECEDENCE[lvl]
            .iter()
            .find(|(k, _)| *k == self.kind())
            .map(|(k, op)| (k.clone(), *op))
        {
            // A `-` on a fresh line is the start of a new unary expression, not
            // a continuation of an additive chain (P4). Only level 4 has
            // PuncMinus, so this guard is inert elsewhere.
            if tok == Kind::PuncMinus && self.has_newline_before_current() {
                break;
            }
            self.eat(tok)?;
            let right = next(self)?;
            let span = self.span_from(left.span());
            left = ast::Expression::BinaryExpression(ast::BinaryExpression {
                left: Box::new(left),
                right: Box::new(right),
                op,
                span,
            });
        }
        Ok(left)
    }

    // Range sits between comparison and additive so that `-5..5` parses as
    // `(-5)..(5)` (unary binds tighter via additive→multiplicative→unary) and
    // `a+b..c+d` parses as `(a+b)..(c+d)`.
    fn parse_range(&mut self) -> PResult<ast::Expression> {
        let left = self.parse_level(Self::RANGE_LEVEL + 1)?;

        if self.kind() == Kind::PuncDotdot {
            let start = left.span();
            self.eat(Kind::PuncDotdot)?;
            let end = self.parse_level(Self::RANGE_LEVEL + 1)?;
            let span = self.span_from(start);
            return Ok(ast::Expression::RangeExpression(ast::RangeExpression {
                start: Box::new(left),
                end: Box::new(end),
                span,
            }));
        }

        Ok(left)
    }

    fn parse_unary_expression(&mut self) -> PResult<ast::Expression> {
        self.with_recursion_guard(Self::parse_unary_expression_inner)
    }

    fn parse_unary_expression_inner(&mut self) -> PResult<ast::Expression> {
        let kind = self.kind();
        let op = match kind {
            Kind::PuncExclamationMark => ast::UnaryOp::Not,
            Kind::PuncMinus => ast::UnaryOp::Neg,
            _ => return self.parse_postfix_expression(),
        };
        let start = self.current_span();
        self.eat(kind)?;
        let inner = self.parse_unary_expression()?;

        Ok(ast::Expression::UnaryExpression(ast::UnaryExpression {
            expression: Box::new(inner),
            op,
            span: self.span_from(start),
        }))
    }

    fn parse_postfix_expression(&mut self) -> PResult<ast::Expression> {
        let mut expr = self.parse_primary_expression()?;

        loop {
            match self.kind() {
                Kind::PuncDot => {
                    expr = self.parse_dot_expression(expr)?;
                }
                Kind::PuncOpenParen => {
                    // Newline before `(` terminates the postfix chain so that
                    //   f
                    //   (a, b)
                    // is two expressions, not a call (P7).
                    if self.has_newline_before_current() {
                        break;
                    }
                    let start = expr.span();
                    let arguments = self.parse_call_args()?;
                    let span = self.span_from(start);
                    expr = ast::Expression::FunctionCallExpression(ast::FunctionCallExpression {
                        callee: Box::new(expr),
                        arguments,
                        span,
                    });
                }
                Kind::PuncOpenBracket => {
                    if self.has_newline_before_current() {
                        break;
                    }
                    let start = expr.span();
                    self.eat(Kind::PuncOpenBracket)?;
                    let index = self.parse_expression()?;
                    self.eat(Kind::PuncCloseBracket)?;
                    let span = self.span_from(start);
                    expr = ast::Expression::ArrayIndexExpression(ast::ArrayIndexExpression {
                        expression: Box::new(expr),
                        index: Box::new(index),
                        span,
                    });
                }
                Kind::PuncMinusminus => {
                    return Err(
                        "Decrement operator (--) is not supported. Values are immutable in AL - use `x = x - 1` with shadowing instead."
                            .to_string(),
                    );
                }
                _ => {
                    break;
                }
            }
        }

        Ok(expr)
    }

    fn parse_call_args(&mut self) -> PResult<Vec<ast::CallArg>> {
        self.parse_comma_list(Kind::PuncOpenParen, Kind::PuncCloseParen, |p| {
            if p.kind() == Kind::PuncDotdot {
                p.eat(Kind::PuncDotdot)?;
                let expr = p.parse_expression()?;
                Ok(ast::CallArg::Spread(expr))
            } else if matches!(&p.cur().kind, Kind::Identifier(n) if !is_type_name(n))
                && p.peek_next() == Some(Kind::PuncColon)
            {
                let label = p.eat_identifier("Expected argument label")?;
                p.eat(Kind::PuncColon)?;
                let value = p.parse_expression()?;
                Ok(ast::CallArg::Labeled { label, value })
            } else {
                Ok(ast::CallArg::Positional(p.parse_expression()?))
            }
        })
    }

    fn parse_primary_expression(&mut self) -> PResult<ast::Expression> {
        self.with_recursion_guard(Self::parse_primary_expression_inner)
    }
